clean up compiler warnings